--- a/extras/yazi/themes/light/2/flavors/oasis-desert-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-desert-light-2.yazi/flavor.toml
@@ -6,9 +6,6 @@
 [mgr]
 cwd = { fg = "#918517" }
 
-hovered = { fg = "#5f4e3b", bg = "#eedac3" }
-preview_hovered = { fg = "#5f4e3b", bg = "#f5e9db" }
-
 find_keyword = { fg = "#deb287", bold = true, italic = true, underline = true }
 find_position = { fg = "#b81c14", bg = "reset", bold = true, italic = true }
 
@@ -31,8 +28,8 @@ inactive = { fg = "#762828", bg = "#f5e9db" }
 
 # MODE
 [mode]
-normal_main = { fg = "#f8f0e7", bg = "#655f22", bold = true }
-normal_alt = { fg = "#655f22", bg = "#f8f0e7" }
+normal_main = { fg = "#f8f0e7", bg = "#762828", bold = true }
+normal_alt = { fg = "#762828", bg = "#f8f0e7" }
 
 select_main = { fg = "#f8f0e7", bg = "#8d4d0e", bold = true }
 select_alt = { fg = "#8d4d0e", bg = "#f8f0e7" }
@@ -104,19 +101,29 @@ title_error = { fg = "#b81c14" }
 [filetype]
 rules = [
   # Media
-  { mime = "image/*", fg = "#34665f" },
-  { mime = "{audio,video}/*", fg = "#655f22" },
+  { mime = "image/*", fg = "#655f22" },
+  { mime = "video/*", fg = "#8d4d0e" },
+  { mime = "audio/*", fg = "#34665f" },
 
   # Archives
   { mime = "application/*zip", fg = "#7a2bdc" },
   { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", fg = "#7a2bdc" },
 
   # Documents
-  { mime = "application/{pdf,doc,rtf,txt,md}", fg = "#2f6849" },
+  { mime = "application/{pdf,doc,rtf,txt,md,vnd.oasis.opendocument.text*}", fg = "#2f6849" },
+  { mime = "text/{richtext,markdown}", fg = "#2f6849" },
+  { mime = "text/{csv}", fg = "#356926" },
+  { mime = "application/{vnd.ms-excel*,vnd.oasis.opendocument.spreadsheet*,vnd.openxmlformats-officedocument.spreadsheet*}", fg = "#356926" },
 
-  # Fallback
-  { name = "*", fg = "#5a5046" },
-  { name = "*/", fg = "#083142" },
+  # Orphans / Empty
+  { mime = "inode/empty", fg = "#bb1313"},
+  { url = "*", is = "orphan", fg = "#9e3e3e"},
+
+  # Executables
+  { url = "*", is = "exec", fg = "#762828"},
+
+  # Directory
+  { url = "*/", fg = "#810404" },
 ]
 
 # SPOT
