--- a/extras/yazi/themes/light/3/flavors/oasis-twilight-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-twilight-light-3.yazi/flavor.toml
@@ -6,9 +6,6 @@
 [mgr]
 cwd = { fg = "#8a7d14" }
 
-hovered = { fg = "#4a4268", bg = "#c4bae9" }
-preview_hovered = { fg = "#4a4268", bg = "#d8d1f0" }
-
 find_keyword = { fg = "#deb287", bold = true, italic = true, underline = true }
 find_position = { fg = "#9f2328", bg = "reset", bold = true, italic = true }
 
@@ -31,8 +28,8 @@ inactive = { fg = "#440391", bg = "#d8d1f0" }
 
 # MODE
 [mode]
-normal_main = { fg = "#e2ddf4", bg = "#5b541e", bold = true }
-normal_alt = { fg = "#5b541e", bg = "#e2ddf4" }
+normal_main = { fg = "#e2ddf4", bg = "#440391", bold = true }
+normal_alt = { fg = "#440391", bg = "#e2ddf4" }
 
 select_main = { fg = "#e2ddf4", bg = "#7e450c", bold = true }
 select_alt = { fg = "#7e450c", bg = "#e2ddf4" }
@@ -104,19 +101,29 @@ title_error = { fg = "#9f2328" }
 [filetype]
 rules = [
   # Media
-  { mime = "image/*", fg = "#2e5b54" },
-  { mime = "{audio,video}/*", fg = "#5b541e" },
+  { mime = "image/*", fg = "#5b541e" },
+  { mime = "video/*", fg = "#7e450c" },
+  { mime = "audio/*", fg = "#2e5b54" },
 
   # Archives
   { mime = "application/*zip", fg = "#6d21cb" },
   { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", fg = "#6d21cb" },
 
   # Documents
-  { mime = "application/{pdf,doc,rtf,txt,md}", fg = "#2a5d42" },
+  { mime = "application/{pdf,doc,rtf,txt,md,vnd.oasis.opendocument.text*}", fg = "#2a5d42" },
+  { mime = "text/{richtext,markdown}", fg = "#2a5d42" },
+  { mime = "text/{csv}", fg = "#2f5e22" },
+  { mime = "application/{vnd.ms-excel*,vnd.oasis.opendocument.spreadsheet*,vnd.openxmlformats-officedocument.spreadsheet*}", fg = "#2f5e22" },
 
-  # Fallback
-  { name = "*", fg = "#503b7d" },
-  { name = "*/", fg = "#083142" },
+  # Orphans / Empty
+  { mime = "inode/empty", fg = "#a71111"},
+  { url = "*", is = "orphan", fg = "#8d3737"},
+
+  # Executables
+  { url = "*", is = "exec", fg = "#440391"},
+
+  # Directory
+  { url = "*/", fg = "#380278" },
 ]
 
 # SPOT
