--- a/extras/yazi/themes/light/5/flavors/oasis-cactus-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-cactus-light-5.yazi/flavor.toml
@@ -6,9 +6,6 @@
 [mgr]
 cwd = { fg = "#8a0000" }
 
-hovered = { fg = "#3c4d44", bg = "#aadebe" }
-preview_hovered = { fg = "#3c4d44", bg = "#c0e7cf" }
-
 find_keyword = { fg = "#deb287", bold = true, italic = true, underline = true }
 find_position = { fg = "#a22527", bg = "reset", bold = true, italic = true }
 
@@ -31,8 +28,8 @@ inactive = { fg = "#2c532e", bg = "#c0e7cf" }
 
 # MODE
 [mode]
-normal_main = { fg = "#cbebd7", bg = "#5c561f", bold = true }
-normal_alt = { fg = "#5c561f", bg = "#cbebd7" }
+normal_main = { fg = "#cbebd7", bg = "#2c532e", bold = true }
+normal_alt = { fg = "#2c532e", bg = "#cbebd7" }
 
 select_main = { fg = "#cbebd7", bg = "#81460d", bold = true }
 select_alt = { fg = "#81460d", bg = "#cbebd7" }
@@ -104,19 +101,29 @@ title_error = { fg = "#a22527" }
 [filetype]
 rules = [
   # Media
-  { mime = "image/*", fg = "#2f5d56" },
-  { mime = "{audio,video}/*", fg = "#5c561f" },
+  { mime = "image/*", fg = "#5c561f" },
+  { mime = "video/*", fg = "#81460d" },
+  { mime = "audio/*", fg = "#2f5d56" },
 
   # Archives
   { mime = "application/*zip", fg = "#7022cf" },
   { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", fg = "#7022cf" },
 
   # Documents
-  { mime = "application/{pdf,doc,rtf,txt,md}", fg = "#2a5f43" },
+  { mime = "application/{pdf,doc,rtf,txt,md,vnd.oasis.opendocument.text*}", fg = "#2a5f43" },
+  { mime = "text/{richtext,markdown}", fg = "#2a5f43" },
+  { mime = "text/{csv}", fg = "#306023" },
+  { mime = "application/{vnd.ms-excel*,vnd.oasis.opendocument.spreadsheet*,vnd.openxmlformats-officedocument.spreadsheet*}", fg = "#306023" },
 
-  # Fallback
-  { name = "*", fg = "#384f3d" },
-  { name = "*/", fg = "#083142" },
+  # Orphans / Empty
+  { mime = "inode/empty", fg = "#ac1111"},
+  { url = "*", is = "orphan", fg = "#903939"},
+
+  # Executables
+  { url = "*", is = "exec", fg = "#2c532e"},
+
+  # Directory
+  { url = "*/", fg = "#224424" },
 ]
 
 # SPOT
