--- a/extras/yazi/themes/light/2/flavors/oasis-cactus-light-2.yazi/flavor.toml
+++ b/extras/yazi/themes/light/2/flavors/oasis-cactus-light-2.yazi/flavor.toml
@@ -6,9 +6,6 @@
 [mgr]
 cwd = { fg = "#a30505" }
 
-hovered = { fg = "#44584c", bg = "#cfe8da" }
-preview_hovered = { fg = "#44584c", bg = "#e4f2ea" }
-
 find_keyword = { fg = "#deb287", bold = true, italic = true, underline = true }
 find_position = { fg = "#b5282c", bg = "reset", bold = true, italic = true }
 
@@ -31,8 +28,8 @@ inactive = { fg = "#38663b", bg = "#e4f2ea" }
 
 # MODE
 [mode]
-normal_main = { fg = "#eef7f2", bg = "#686123", bold = true }
-normal_alt = { fg = "#686123", bg = "#eef7f2" }
+normal_main = { fg = "#eef7f2", bg = "#38663b", bold = true }
+normal_alt = { fg = "#38663b", bg = "#eef7f2" }
 
 select_main = { fg = "#eef7f2", bg = "#904f0e", bold = true }
 select_alt = { fg = "#904f0e", bg = "#eef7f2" }
@@ -104,19 +101,29 @@ title_error = { fg = "#b5282c" }
 [filetype]
 rules = [
   # Media
-  { mime = "image/*", fg = "#356861" },
-  { mime = "{audio,video}/*", fg = "#686123" },
+  { mime = "image/*", fg = "#686123" },
+  { mime = "video/*", fg = "#904f0e" },
+  { mime = "audio/*", fg = "#356861" },
 
   # Archives
   { mime = "application/*zip", fg = "#7d2fdd" },
   { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", fg = "#7d2fdd" },
 
   # Documents
-  { mime = "application/{pdf,doc,rtf,txt,md}", fg = "#306b4b" },
+  { mime = "application/{pdf,doc,rtf,txt,md,vnd.oasis.opendocument.text*}", fg = "#306b4b" },
+  { mime = "text/{richtext,markdown}", fg = "#306b4b" },
+  { mime = "text/{csv}", fg = "#366b27" },
+  { mime = "application/{vnd.ms-excel*,vnd.oasis.opendocument.spreadsheet*,vnd.openxmlformats-officedocument.spreadsheet*}", fg = "#366b27" },
 
-  # Fallback
-  { name = "*", fg = "#405945" },
-  { name = "*/", fg = "#083142" },
+  # Orphans / Empty
+  { mime = "inode/empty", fg = "#bf1313"},
+  { url = "*", is = "orphan", fg = "#a13f3f"},
+
+  # Executables
+  { url = "*", is = "exec", fg = "#38663b"},
+
+  # Directory
+  { url = "*/", fg = "#2e572f" },
 ]
 
 # SPOT
