--- a/extras/yazi/themes/light/3/flavors/oasis-cactus-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-cactus-light-3.yazi/flavor.toml
@@ -6,9 +6,6 @@
 [mgr]
 cwd = { fg = "#9b0303" }
 
-hovered = { fg = "#405348", bg = "#c1e1cf" }
-preview_hovered = { fg = "#405348", bg = "#d6ebdf" }
-
 find_keyword = { fg = "#deb287", bold = true, italic = true, underline = true }
 find_position = { fg = "#ac2529", bg = "reset", bold = true, italic = true }
 
@@ -31,8 +28,8 @@ inactive = { fg = "#346036", bg = "#d6ebdf" }
 
 # MODE
 [mode]
-normal_main = { fg = "#e0f0e7", bg = "#625c21", bold = true }
-normal_alt = { fg = "#625c21", bg = "#e0f0e7" }
+normal_main = { fg = "#e0f0e7", bg = "#346036", bold = true }
+normal_alt = { fg = "#346036", bg = "#e0f0e7" }
 
 select_main = { fg = "#e0f0e7", bg = "#894b0d", bold = true }
 select_alt = { fg = "#894b0d", bg = "#e0f0e7" }
@@ -104,19 +101,29 @@ title_error = { fg = "#ac2529" }
 [filetype]
 rules = [
   # Media
-  { mime = "image/*", fg = "#32635c" },
-  { mime = "{audio,video}/*", fg = "#625c21" },
+  { mime = "image/*", fg = "#625c21" },
+  { mime = "video/*", fg = "#894b0d" },
+  { mime = "audio/*", fg = "#32635c" },
 
   # Archives
   { mime = "application/*zip", fg = "#7725db" },
   { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", fg = "#7725db" },
 
   # Documents
-  { mime = "application/{pdf,doc,rtf,txt,md}", fg = "#2d6547" },
+  { mime = "application/{pdf,doc,rtf,txt,md,vnd.oasis.opendocument.text*}", fg = "#2d6547" },
+  { mime = "text/{richtext,markdown}", fg = "#2d6547" },
+  { mime = "text/{csv}", fg = "#336625" },
+  { mime = "application/{vnd.ms-excel*,vnd.oasis.opendocument.spreadsheet*,vnd.openxmlformats-officedocument.spreadsheet*}", fg = "#336625" },
 
-  # Fallback
-  { name = "*", fg = "#3c5441" },
-  { name = "*/", fg = "#083142" },
+  # Orphans / Empty
+  { mime = "inode/empty", fg = "#b51212"},
+  { url = "*", is = "orphan", fg = "#993c3c"},
+
+  # Executables
+  { url = "*", is = "exec", fg = "#346036"},
+
+  # Directory
+  { url = "*/", fg = "#2a512b" },
 ]
 
 # SPOT
