--- a/extras/yazi/themes/light/3/flavors/oasis-starlight-light-3.yazi/flavor.toml
+++ b/extras/yazi/themes/light/3/flavors/oasis-starlight-light-3.yazi/flavor.toml
@@ -6,9 +6,6 @@
 [mgr]
 cwd = { fg = "#8a7d14" }
 
-hovered = { fg = "#564f3e", bg = "#e9dbba" }
-preview_hovered = { fg = "#564f3e", bg = "#f0e7d1" }
-
 find_keyword = { fg = "#deb287", bold = true, italic = true, underline = true }
 find_position = { fg = "#ab2a2e", bg = "reset", bold = true, italic = true }
 
@@ -31,8 +28,8 @@ inactive = { fg = "#05558f", bg = "#f0e7d1" }
 
 # MODE
 [mode]
-normal_main = { fg = "#f4eddd", bg = "#645d21", bold = true }
-normal_alt = { fg = "#645d21", bg = "#f4eddd" }
+normal_main = { fg = "#f4eddd", bg = "#05558f", bold = true }
+normal_alt = { fg = "#05558f", bg = "#f4eddd" }
 
 select_main = { fg = "#f4eddd", bg = "#8a4b0e", bold = true }
 select_alt = { fg = "#8a4b0e", bg = "#f4eddd" }
@@ -104,19 +101,29 @@ title_error = { fg = "#ab2a2e" }
 [filetype]
 rules = [
   # Media
-  { mime = "image/*", fg = "#33645d" },
-  { mime = "{audio,video}/*", fg = "#645d21" },
+  { mime = "image/*", fg = "#645d21" },
+  { mime = "video/*", fg = "#8a4b0e" },
+  { mime = "audio/*", fg = "#33645d" },
 
   # Archives
   { mime = "application/*zip", fg = "#7826dc" },
   { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", fg = "#7826dc" },
 
   # Documents
-  { mime = "application/{pdf,doc,rtf,txt,md}", fg = "#2e6648" },
+  { mime = "application/{pdf,doc,rtf,txt,md,vnd.oasis.opendocument.text*}", fg = "#2e6648" },
+  { mime = "text/{richtext,markdown}", fg = "#2e6648" },
+  { mime = "text/{csv}", fg = "#336725" },
+  { mime = "application/{vnd.ms-excel*,vnd.oasis.opendocument.spreadsheet*,vnd.openxmlformats-officedocument.spreadsheet*}", fg = "#336725" },
 
-  # Fallback
-  { name = "*", fg = "#524f49" },
-  { name = "*/", fg = "#083142" },
+  # Orphans / Empty
+  { mime = "inode/empty", fg = "#b71212"},
+  { url = "*", is = "orphan", fg = "#9a3d3d"},
+
+  # Executables
+  { url = "*", is = "exec", fg = "#05558f"},
+
+  # Directory
+  { url = "*/", fg = "#134f67" },
 ]
 
 # SPOT
