--- a/extras/yazi/themes/light/5/flavors/oasis-canyon-light-5.yazi/flavor.toml
+++ b/extras/yazi/themes/light/5/flavors/oasis-canyon-light-5.yazi/flavor.toml
@@ -6,9 +6,6 @@
 [mgr]
 cwd = { fg = "#145a76" }
 
-hovered = { fg = "#52412d", bg = "#ecbd93" }
-preview_hovered = { fg = "#52412d", bg = "#f1cdad" }
-
 find_keyword = { fg = "#d5ca90", bold = true, italic = true, underline = true }
 find_position = { fg = "#982226", bg = "reset", bold = true, italic = true }
 
@@ -31,8 +28,8 @@ inactive = { fg = "#803f00", bg = "#f1cdad" }
 
 # MODE
 [mode]
-normal_main = { fg = "#f3d5ba", bg = "#56511d", bold = true }
-normal_alt = { fg = "#56511d", bg = "#f3d5ba" }
+normal_main = { fg = "#f3d5ba", bg = "#803f00", bold = true }
+normal_alt = { fg = "#803f00", bg = "#f3d5ba" }
 
 select_main = { fg = "#f3d5ba", bg = "#79420c", bold = true }
 select_alt = { fg = "#79420c", bg = "#f3d5ba" }
@@ -104,19 +101,29 @@ title_error = { fg = "#982226" }
 [filetype]
 rules = [
   # Media
-  { mime = "image/*", fg = "#2c5750" },
-  { mime = "{audio,video}/*", fg = "#56511d" },
+  { mime = "image/*", fg = "#56511d" },
+  { mime = "video/*", fg = "#79420c" },
+  { mime = "audio/*", fg = "#2c5750" },
 
   # Archives
   { mime = "application/*zip", fg = "#6a20c2" },
   { mime = "application/x-{tar,bzip*,7z-compressed,xz,rar}", fg = "#6a20c2" },
 
   # Documents
-  { mime = "application/{pdf,doc,rtf,txt,md}", fg = "#28593f" },
+  { mime = "application/{pdf,doc,rtf,txt,md,vnd.oasis.opendocument.text*}", fg = "#28593f" },
+  { mime = "text/{richtext,markdown}", fg = "#28593f" },
+  { mime = "text/{csv}", fg = "#2d5a20" },
+  { mime = "application/{vnd.ms-excel*,vnd.oasis.opendocument.spreadsheet*,vnd.openxmlformats-officedocument.spreadsheet*}", fg = "#2d5a20" },
 
-  # Fallback
-  { name = "*", fg = "#5c3c26" },
-  { name = "*/", fg = "#083142" },
+  # Orphans / Empty
+  { mime = "inode/empty", fg = "#a11010"},
+  { url = "*", is = "orphan", fg = "#873535"},
+
+  # Executables
+  { url = "*", is = "exec", fg = "#803f00"},
+
+  # Directory
+  { url = "*/", fg = "#623e04" },
 ]
 
 # SPOT
